crates/trade-api/tests/snapshots/query_builder__magic_wand_query_snapshot.snap
---
source: crates/trade-api/tests/query_builder.rs
expression: req
---
{
  "query": {
    "status": {
      "option": "online"
    },
    "type": "Volatile Wand",
    "stats": [
      {
        "type": "and",
        "filters": [
          {
            "id": "explicit.stat_2974417149",
            "value": {
              "min": 63
            },
            "disabled": true
          },
          {
            "id": "explicit.stat_2891184298",
            "value": {
              "min": 17
            },
            "disabled": true
          }
        ]
      }
    ],
    "filters": {
      "type_filters": {
        "filters": {
          "category": {
            "option": "weapon.wand"
          }
        }
      }
    }
  },
  "sort": {
    "price": "asc"
  }
}
